--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <base href="%REACT_APP_BASE%">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="shortcut icon"
+      href="./images/imdb-logo.jpeg"
+      type="image/x-icon"
+    >
     <title>Movies App</title>
   </head>
   <body>
